--- a/AO-Opdrachten/week 2/Wie ben ik/wie ben ik.html
+++ b/AO-Opdrachten/week 2/Wie ben ik/wie ben ik.html
@@ -7,9 +7,12 @@
 <body>
 
     <ul>
-        <li><a href="Iets over mij.html" class="active">Wie ben ik?</a></li>
-        <li><a href="Opleiding.html">Over de opleiding</a></li>
-        <li><a href="https://www.instagram.com/gekkeshit_078_/">Mijn bezigheid</a></li>        
+        <li><a href="Iets over mij.html" class="active">Home</a></li>
+        <li><a href="Opleiding.html">Auto's</a></li>
+        <li><a href="https://www.instagram.com/gekkeshit_078_/">Kleding</a></li>        
+        <li><a href="Iets over mij.html"> </a></li>
+        <li><a href="Opleiding.html">Blog</a></li>
+        <li><a href="https://www.instagram.com/gekkeshit_078_/">Gallery</a></li>
       </ul>
       
 
