--- a/AO-Opdrachten/Blok 2/week 1/adventure.html
+++ b/AO-Opdrachten/Blok 2/week 1/adventure.html
@@ -16,7 +16,7 @@
       	<button id="button2" type="button"></button>
       	<button id="button3" type="button"></button>
       </div>
-      <img id="inventoryItem" src="#" alt="inventory item">
+      <img id="inventoryItem" src="../week 1/img/sleutelbos.jpg" alt="inventory item">
 
  
 
