--- a/AO-Opdrachten/Blok 2/week 2/lingo.html
+++ b/AO-Opdrachten/Blok 2/week 2/lingo.html
@@ -7,24 +7,21 @@
 </head>
 <body>
 
-<div class="header">
-<div class="nav">
-<ul>
-<li><a href="Music.html" id="sh">Music</a></li>
-</ul>
+
+
 </div>
 </div>
 
-<div class="out-header"></div>
 
 
 
 
-<div id='Hoofdtitel'>
+
+<div id='textboven'>
 Lingo
 </div>
 
-<div id='Introductie'>
+<div id='goedekleur'>
 Groen = Juist, Geel = Verkeerde plek
 </div>
 
@@ -44,25 +41,25 @@ Groen = Juist, Geel = Verkeerde plek
 <div class ="square default" id="r2c4"></div>
 </div>
 <div id="row3">
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
+    <div class ="square default" id="r3c0"></div>
+    <div class ="square default" id="r3c1"></div>
+    <div class ="square default" id="r3c2"></div>
+    <div class ="square default" id="r3c3"></div>
+    <div class ="square default" id="r3c4"></div>
 </div>
 <div id="row4">
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
+    <div class ="square default" id="r4c0"></div>
+    <div class ="square default" id="r4c1"></div>
+    <div class ="square default" id="r4c2"></div>
+    <div class ="square default" id="r4c3"></div>
+    <div class ="square default" id="r4c4"></div>
 </div>
 <div id="row5">
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
-<div class ="square default"></div>
+    <div class ="square default" id="r5c0"></div>
+    <div class ="square default" id="r5c1"></div>
+    <div class ="square default" id="r5c2"></div>
+    <div class ="square default" id="r5c3"></div>
+    <div class ="square default" id="r5c4"></div>
 </div>
 </div>
 
@@ -72,10 +69,6 @@ Groen = Juist, Geel = Verkeerde plek
 
 
 
-<div id='stars'></div>
-        <div id='stars2'></div>
-        <div id='stars3'></div>
-        <div id='title'>
      
 
  
