--- a/AO-Opdrachten/Blok 2/week 2/lingo.html
+++ b/AO-Opdrachten/Blok 2/week 2/lingo.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="lingo.css">
+
+
 <head>
+<link rel="stylesheet" type="text/css" href="lingo.css">
+<script src="lingo-words.js"></script>
 <meta charset="UTF-8">
 <title>Lingo Game</title>
 </head>
@@ -75,6 +78,7 @@ Groen = Juist, Geel = Verkeerde plek
 
 
     <script type="text/javascript" src="lingo-nl.js"></script>
+    <script type="text/javascript" src="lingo-words.js"></script>
    
 </body>
 </html>
