--- a/AO-Opdrachten/blok 3/week 6 bootstrap/opdracht/puzzle2.html
+++ b/AO-Opdrachten/blok 3/week 6 bootstrap/opdracht/puzzle2.html
@@ -11,88 +11,101 @@
 </head>
 <body>
 
-<div>
-    <div>
-        <div>
-            <h1>Bootstrap Puzzle 2</h1>
+    <div class="container bg-secondary">
+        <div class="row bg-secondary ">
+            <div class="col-lg-8">
+                <h1>Bootstrap Puzzle 2</h1>
+            </div>
+            <div class="col-lg-4">
+    
+                <a class="btn-floating btn-lg black dropdown-toggle"type="button" id="dropdownMenu3" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></a>
+    
+                <ul  class="dropdown-menu dropdown-primary">
+                    <li><a  class="dropdown-item" href="index.html">Home</a></li>
+                    <li><a  class="dropdown-item" href="puzzle1.html">Puzzle 1</a></li>
+                    <li><a   class="dropdown-item" href="puzzle2.html">Puzzle 2</a></li>
+                    <li><a  class="dropdown-item" href="puzzle3.html">Puzzle 3</a></li>
+                    <li><a   class="dropdown-item" href="bonus.html">Bonus</a></li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <a></a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="puzzle1.html">Puzzle 1</a></li>
-                <li><a href="puzzle2.html">Puzzle 2</a></li>
-                <li><a href="puzzle3.html">Puzzle 3</a></li>
-                <li><a href="bonus.html">Bonus</a></li>
-            </ul>
-        </div>
-    </div>
 
-    <div>
-        <div>
-            <a href="img/img1.jpg" target="_blank">
+    <div id="demo" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+          <li data-target="#demo" data-slide-to="3"></li>
+          <li data-target="#demo" data-slide-to="4"></li>
+        </ul>
+
+
+
+        <div class="carousel-inner">
+            <a class="carousel-item active" href="img/img1.jpg" target="_blank">
                 <img src="img/img1.jpg">
                 <span>Bekijk Boom 1</span>
             </a>
-            <a href="img/img2.jpg" target="_blank">
+            <a  class="carousel-item" href="img/img2.jpg" target="_blank">
                 <img src="img/img2.jpg">
                 <span>Bekijk Boom 2</span>
             </a>
-            <a href="img/img3.jpg" target="_blank">
+            <a  class="carousel-item" href="img/img3.jpg" target="_blank">
                 <img src="img/img3.jpg">
                 <span>Bekijk Boom 3</span>
             </a>
-            <a href="img/img4.jpg" target="_blank">
+            <a  class="carousel-item" href="img/img4.jpg" target="_blank">
                 <img src="img/img4.jpg">
                 <span>Bekijk Boom 4</span>
             </a>
-            <a href="img/img5.jpg" target="_blank">
+            <a  class="carousel-item" href="img/img5.jpg" target="_blank">
                 <img src="img/img5.jpg">
                 <span>Bekijk Boom 5</span>
             </a>
         </div>
     </div>
 
-    <div>
-        <div>
-            <div>
-                <img src="img/item1.jpg">
-                <h2>Etiam hendrerit vel sem ac accumsan</h2>
-                <p id="item1text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                <p><a href="#item1text">Lees meer &hellip;</a></p>
+    <div class="row col-12 justify-content-center">
+        <div  class="col-6 justify-content-center">
+            <div class="row col-12 p-2 m-2 bg-white" >
+                <img class=" col-3 p-0 "src="img/item1.jpg">
+                <h2 class="col-9 p-0 m-0 bg-info ">Etiam hendrerit vel sem ac accumsan</h2>
+                <p id="item1text" class="collapse">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                <p><a type="button"  class="btn btn-info" data-toggle="collapse" data-target="#item1text">Lees meer &hellip;</a></p>
             </div>
-            <div>
-                <img src="img/item2.jpg">
-                <h2>Etiam hendrerit vel sem ac accumsan</h2>
-                <p id="item2text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                <p><a href="#item2text">Lees meer &hellip;</a></p>
+            <div class="row col-12 p-2 m-2 bg-white" >
+                <img class=" col-3 p-0 " src="img/item2.jpg" >
+                <h2 class="col-9 p-0 m-0 bg-info ">Etiam hendrerit vel sem ac accumsan</h2>
+                <p id="item2text" class="collapse">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                <p><a type="button"  class="btn btn-info" data-toggle="collapse" data-target="#item2text">Lees meer &hellip;</a></p>
             </div>
-            <div>
-                <img src="img/item3.jpg">
-                <h2>Etiam hendrerit vel sem ac accumsan</h2>
-                <p id="item3text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                <p><a href="#item3text">Lees meer &hellip;</a></p>
+            <div class="row col-12 p-2 m-2 bg-white" >
+                <img class=" col-3 p-0 " src="img/item3.jpg">
+                <h2 class="col-9 p-0 m-0 bg-info ">Etiam hendrerit vel sem ac accumsan</h2>
+                <p id="item3text" class="collapse">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                <p><a type="button"  class="btn btn-info" data-toggle="collapse" data-target="#item3text">Lees meer &hellip;</a></p>
             </div>
         </div>
 
-        <div>
-            <div>
-                <img src="img/item4.jpg">
-                <h2>Etiam hendrerit vel sem ac accumsan</h2>
-                <p id="item4text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                <p><a href="#item4text">Lees meer &hellip;</a></p>
+        <div class="col-6 justify-content-center">
+            <div class="row col-12 p-2 m-2 bg-white">
+                <img class="col-3 p-0" src="img/item4.jpg">
+                <h2 class="col-9 p-0 m-0 bg-info ">Etiam hendrerit vel sem ac accumsan</h2>
+                <p id="item4text" class="collapse">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                <p><a type="button"  class="btn btn-info" data-toggle="collapse" data-target="#item4text">Lees meer &hellip;</a></p>
             </div>
-            <div>
-                <img src="img/item5.jpg">
-                <h2>Etiam hendrerit vel sem ac accumsan</h2>
-                <p id="item5text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                <p><a href="#item5text">Lees meer &hellip;</a></p>
+            <div class="row col-12 p-2 m-2 bg-white">
+                <img class=" col-3 p-0 " src="img/item5.jpg">
+                <h2 class="col-9 p-0 m-0 bg-info ">Etiam hendrerit vel sem ac accumsan</h2>
+                <p id="item5text" class="collapse">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                <p><a type="button"  class="btn btn-info" data-toggle="collapse" data-target="#item5text">Lees meer &hellip;</a></p>
             </div>
-            <div>
-                <img src="img/item6.jpg">
-                <h2>Etiam hendrerit vel sem ac accumsan</h2>
-                <p id="item6text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
-                <p><a href="#item6text">Lees meer &hellip;</a></p>
+            <div class="row col-12 p-2 m-2 bg-white">
+                <img class=" col-3 p-0 " src="img/item6.jpg">
+                <h2 class="col-9 p-0 m-0 bg-info" >Etiam hendrerit vel sem ac accumsan</h2>
+                <p id="item6text"  class="collapse">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nunc lectus, feugiat id ipsum sed, sollicitudin malesuada justo. Nam congue commodo quam, vitae gravida mi. Aliquam erat volutpat. Suspendisse semper, lectus eu accumsan feugiat, nunc nibh euismod turpis, ut suscipit massa nibh at eros. Vivamus vel orci sed libero accumsan egestas. </p>
+                <p><a type="button"  class="btn btn-info" data-toggle="collapse" data-target="#item6text">Lees meer &hellip;</a></p>
             </div>
         </div>
     </div>
