--- a/AO-Opdrachten/blok 3/week 6 bootstrap/opdracht/puzzle1.html
+++ b/AO-Opdrachten/blok 3/week 6 bootstrap/opdracht/puzzle1.html
@@ -109,3 +109,9 @@
 </div>
 </body>
 </html>
+
+<div class="row">
+
+    <img src="img/header.jpg" class="col-12" alt="Responsive image" >
+    
+    </div>
