--- a/AO-Opdrachten/Jaar 2/Front End stemwijzer/stemwijzer.html
+++ b/AO-Opdrachten/Jaar 2/Front End stemwijzer/stemwijzer.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Stemwijzer</title>
   </head>
   <style>
@@ -125,32 +126,14 @@ position: absolute;
 }
 
 /* Remove extra left and right margins, due to padding */
-#scorens {margin: 0 -5px;}
 
-/* Clear floats after the columns */
-
-
-/* Responsive columns */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
-/* Style the counter cards */
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
-  text-align: center;
-  background-color: #f1f1f1;
-}
 
 #btnNext{
   font-size: 50px;
   float: right;
 }
+
+
   
   </style>
   <body>
@@ -167,7 +150,14 @@ position: absolute;
           <button style="display: none;"  id="btnMening">GEEN MENING</button>
           <button style="display: none;"  id="btnOneens">ONEENS</button>
         </div>
-          <button style="display: none;"  id="resultaat" >Resultaat</button>
+
+        <div style="display: none;" id="showPartiesCheck">
+          <div id="partie"></div>
+          <button id="checkedResult">Check</button>
+        </div>
+
+        <button style="display: none;"  id="resultaat" >Resultaat</button>
+
       </div>
 
       <i style="display: none;"  id="btnPrevious" class="fas fa-arrow-left"></i>
@@ -175,8 +165,20 @@ position: absolute;
       
 
       <div style="display: none;" id="scorens">
-       <H2 style="margin-left: 5px;">Dit zijn de 3 partijen die het beste bij u passen!</H2>
         <div class="column">
+          <div class="card">
+            <h4  id="p">1</h4>
+            <p id="score">score</p>
+          </div>
+        </div>
+       <!-- <H2 style="margin-left: 5px;">Dit zijn de 3 partijen die het beste bij u passen!</H2>
+         <div class="column">
+          <div class="card">
+            <h4  id="p">1</h4>
+            <p id="score">score</p>
+          </div>
+        </div> -->
+        <!-- <div class="column">
           <div class="card">
             <h4  id="p1">1</h4>
             <p id="score1">score</p>
@@ -195,7 +197,10 @@ position: absolute;
             <h4 id="p3">3</h4>
             <p id="score3">score</p>
           </div>
+        </div> -->
         </div>
+
+
 
   
       <footer>
@@ -203,7 +208,7 @@ position: absolute;
     </div>
   </body>
   <!-- <script src="data.js"></script> -->
- <script src="http://stemwijzer.dvc-icta.nl/data.js"></script> 
+ <script src="http://stemwijzer.dvc-icta.nl/testdata.js"></script> 
  <script src="stemwijzer.js"></script>
 </html>
 
