task laten zien update lijst

--- a/AO-Opdrachten/Jaar 2/Front End stemwijzer/stemwijzer.html
+++ b/AO-Opdrachten/Jaar 2/Front End stemwijzer/stemwijzer.html
@@ -262,7 +262,7 @@ margin-left: 10px;
     </div>
   </body>
   <!-- <script src="data.js"></script> -->
- <script src="http://stemwijzer.dvc-icta.nl/data.js"></script> 
+ <script src="http://stemwijzer.dvc-icta.nl/testdata.js"></script> 
  <script src="stemwijzer.js"></script>
 </html>
 
